--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,19 +11,80 @@ jobs:
       - name: Deploy via SSH
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.VPS_IP }}
+          host: ${{ secrets.VPS_HOST }}
           username: root
-          key: ${{ secrets.VPS_SSH_KEY }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
+            # 1. Navigate to project folder
             cd /root/my-vps-stack
+            
+            # 2. Pull latest code (Using HTTPS because it's a Public Repo)
             git pull origin main
             
-            # --- NEW: Pre-flight Setup ---
-            # Ensure the config folder exists
+            # --- AUTO-HEAL: FILEBROWSER CONFIG ---
             mkdir -p config/fb
-            # Create the empty DB file if it doesn't exist yet
-            touch config/fb/filebrowser.db
-            # -----------------------------
+            
+            # Force strict settings so it finds the DB correctly
+            cat <<EOF > config/fb/settings.json
+            {
+              "port": 80,
+              "address": "",
+              "database": "/database.db",
+              "root": "/srv"
+            }
+            EOF
+            
+            # Initialize DB + Admin User if missing (Prevents crash on new VPS)
+            if [ ! -s config/fb/filebrowser.db ]; then
+              echo "Initializing new database..."
+              touch config/fb/filebrowser.db
+              chmod 666 config/fb/filebrowser.db
+              
+              # Init Database Structure
+              docker run --rm \
+                -v $(pwd)/config/fb/filebrowser.db:/database.db \
+                -v $(pwd)/config/fb/settings.json:/config/settings.json \
+                filebrowser/filebrowser config init
+              
+              # Create Admin User (admin / adminadmin1234)
+              docker run --rm \
+                -v $(pwd)/config/fb/filebrowser.db:/database.db \
+                -v $(pwd)/config/fb/settings.json:/config/settings.json \
+                filebrowser/filebrowser users add admin adminadmin1234 --perm.admin
+            fi
+            
+            # --- AUTO-HEAL: QBITTORRENT CONFIG ---
+            mkdir -p config/qbit/qBittorrent
+            
+            # Inject persistent password config if it doesn't exist
+            if [ ! -f config/qbit/qBittorrent/qBittorrent.conf ]; then
+              echo "Injecting qBittorrent config..."
+              cat <<EOF > config/qbit/qBittorrent/qBittorrent.conf
+            [LegalNotice]
+            Accepted=true
 
+            [Network]
+            Cookies=@Invalid()
+
+            [Preferences]
+            Connection\PortRangeMin=6881
+            Connection\UPnP=false
+            Downloads\SavePath=/downloads/
+            Downloads\TempPath=/downloads/incomplete/
+            WebUI\Address=*
+            # Password: adminadmin1234
+            WebUI\Password_PBKDF2="@ByteArray(xWEWNv2w/RrX3U4SEv80AA==:iKoFnRYgZ8UwWr2eXzdpsJfzQB/VxCcVh94rzujswL/DBy8ZWfN7qioHbyIGakAyXxwhhXSvArxgfnT+hAOJTA==)"
+            WebUI\Port=8080
+            WebUI\Username=admin
+            EOF
+            fi
+
+            # --- SECRETS INJECTION ---
+            # Create .env file from GitHub Secrets (for Tunnel Token, etc)
+            echo "TUNNEL_TOKEN=${{ secrets.TUNNEL_TOKEN }}" > .env
+            
+            # 3. Build and Start Containers
             docker compose up -d --build --remove-orphans
+            
+            # 4. Cleanup old images to save disk space
             docker image prune -f
