--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,8 @@ jobs:
             credentials-file: /etc/cloudflared/cert.json
 
             ingress:
+              - hostname: docker.${{ secrets.DOMAIN }}
+                service: http://portainer:9000
               - hostname: status.${{ secrets.DOMAIN }}
                 service: http://uptime-kuma:3001
               - hostname: drive.${{ secrets.DOMAIN }}
