--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,18 @@
 version: "3.8"
 services:
+  portainer:
+    image: portainer/portainer-ce:latest
+    container_name: portainer
+    restart: always
+    security_opt:
+      - no-new-privileges:true
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - portainer_data:/data
+    ports:
+      - "9000:9000"
+
   tunnel:
     container_name: my-vps-stack-tunnel
     image: cloudflare/cloudflared
@@ -66,4 +79,5 @@ services:
 
 volumes:
   n8n_data:
+  portainer_data:
   uptime-kuma-data:
