fix: code review improvements - Add unknown command feedback and empty command guard in WhatsApp bot - Add clarifying comment for FileBrowser root user - Fix deploy.yml step numbering - Add Seedbox.md reference to README

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,7 +61,7 @@ services:
 
   filebrowser:
     image: filebrowser/filebrowser
-    user: 0:0
+    user: 0:0 # Run as root for full /srv access
     volumes:
       - /opt/seedbox:/srv
       - ./config/fb/filebrowser.db:/database.db
@@ -76,7 +76,6 @@ services:
       - ALLOWED_GROUP_ID=${ALLOWED_GROUP_ID}
     volumes:
       - ./whatsapp-bot/auth_info_baileys:/usr/src/app/auth_info_baileys
-      - ./whatsapp-bot/chat_db.json:/usr/src/app/chat_db.json
 
 volumes:
   n8n_data:
