--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,10 +52,10 @@ jobs:
               echo "DOMAIN_NAME=localhost" >> .env
             fi
 
-            # 3b. Inject WhatsApp Bot Config
+            # 4. Inject WhatsApp Bot Config
             echo "ALLOWED_GROUP_ID=${{ secrets.ALLOWED_GROUP_ID }}" >> .env
 
-            # 4. Generate FileBrowser Settings
+            # 5. Generate FileBrowser Settings
             mkdir -p config/fb
             cat <<EOF > config/fb/settings.json
             {
@@ -66,15 +66,15 @@ jobs:
             }
             EOF
 
-            # 5. Initialize FileBrowser DB if missing
+            # 6. Initialize FileBrowser DB if missing
             if [ ! -s config/fb/filebrowser.db ]; then
               touch config/fb/filebrowser.db
-              chmod 666 config/fb/filebrowser.db
+              chmod 644 config/fb/filebrowser.db
               docker run --rm -v $(pwd)/config/fb/filebrowser.db:/database.db -v $(pwd)/config/fb/settings.json:/config/settings.json filebrowser/filebrowser config init
               docker run --rm -v $(pwd)/config/fb/filebrowser.db:/database.db -v $(pwd)/config/fb/settings.json:/config/settings.json filebrowser/filebrowser users add admin adminadmin1234 --perm.admin
             fi
 
-            # 6. Configure qBittorrent
+            # 7. Configure qBittorrent
             mkdir -p config/qbit/qBittorrent
             if [ ! -f config/qbit/qBittorrent/qBittorrent.conf ]; then
               cat <<EOF > config/qbit/qBittorrent/qBittorrent.conf
@@ -86,7 +86,7 @@ jobs:
             EOF
             fi
 
-            # 7. Deployment
+            # 8. Deployment
             sysctl -w net.core.rmem_max=2500000 || true
             docker compose up -d --build --remove-orphans
             docker image prune -f
