--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,12 +43,14 @@ services:
       - n8n_data:/home/node/.n8n
     environment:
       - N8N_HOST=${DOMAIN_NAME}
+      - TZ=Asia/Kolkata
 
   qbittorrent:
     image: lscr.io/linuxserver/qbittorrent:latest
     environment:
       - PUID=1000
       - PGID=1000
+      - TZ=Asia/Kolkata
       - WEBUI_PORT=8080
     volumes:
       - ./config/qbit:/config
