--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
 
             # 2. Setup Directories & Env
             mkdir -p config/tunnel config/fb config/qbit
-            echo "" > .env
+            : > .env  # Clear .env (safer than echo)
 
             # 3. Auto-generate docker-compose.yml from apps/*/docker-compose.yml
             echo "# Auto-generated - DO NOT EDIT" > docker-compose.yml
@@ -48,10 +48,20 @@ jobs:
               echo "ingress:" >> config/tunnel/config.yml
               
               # Dynamically add ingress rules from each app's ingress.yml
+              # Install yq once if not present (with fallback to grep)
+              if ! command -v yq &>/dev/null; then
+                wget -qO /usr/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 && chmod +x /usr/bin/yq || echo "⚠️ yq install failed, using grep fallback"
+              fi
+              
               for ingress_file in apps/*/ingress.yml; do
                 if [ -f "$ingress_file" ]; then
-                  hostname=$(grep "^hostname:" "$ingress_file" | cut -d' ' -f2)
-                  service=$(grep "^service:" "$ingress_file" | cut -d' ' -f2)
+                  if command -v yq &>/dev/null; then
+                    hostname=$(yq '.hostname' "$ingress_file")
+                    service=$(yq '.service' "$ingress_file")
+                  else
+                    hostname=$(grep "^hostname:" "$ingress_file" | awk '{print $2}')
+                    service=$(grep "^service:" "$ingress_file" | awk '{print $2}')
+                  fi
                   echo "  - hostname: ${hostname}.${{ secrets.DOMAIN }}" >> config/tunnel/config.yml
                   echo "    service: ${service}" >> config/tunnel/config.yml
                   echo "  ✓ Added route: ${hostname} -> ${service}"
@@ -62,14 +72,17 @@ jobs:
               echo "  - service: http_status:404" >> config/tunnel/config.yml
 
               echo "DOMAIN_NAME=${{ secrets.DOMAIN }}" >> .env
+              
+              # Force tunnel to reload new config
+              docker restart my-vps-stack-tunnel 2>/dev/null || true
             else
               echo "⚠️ Fallback Mode"
               echo "DOMAIN_NAME=localhost" >> .env
             fi
 
             # 5. Inject Bot Configs
-            echo "ALLOWED_GROUP_ID=${{ secrets.ALLOWED_GROUP_ID }}" >> .env
             echo "TG_BOT_TOKEN=${{ secrets.TG_BOT_TOKEN }}" >> .env
+            echo "ALLOWED_GROUP_ID=${{ secrets.ALLOWED_GROUP_ID }}" >> .env
 
             # 6. Run init scripts for each app (first-time setup)
             for init_script in apps/*/init.sh; do
