--- a/apps/homarr/docker-compose.yml
+++ b/apps/homarr/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     image: ghcr.io/homarr-labs/homarr:latest
     container_name: homarr
     restart: always
+    environment:
+      - SECRET_ENCRYPTION_KEY=your_super_secret_key_change_this_64_chars_minimum_length_here
     volumes:
       - homarr_data:/appdata
     ports:
