feat: replace homarr with auto-generated dashboard
- Add apps/dashboard/ with nginx container
- Auto-generate index.html from ingress.yml files during deploy
- Styled tiles with icons for each app
- Archive homarr (no longer needed)
- Update README

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,7 +84,117 @@ jobs:
             echo "TG_BOT_TOKEN=${{ secrets.TG_BOT_TOKEN }}" >> .env
             echo "ALLOWED_GROUP_ID=${{ secrets.ALLOWED_GROUP_ID }}" >> .env
 
-            # 6. Run init scripts for each app (first-time setup)
+            # 6. Generate Dashboard from ingress.yml files
+            mkdir -p config/dashboard
+            cat > config/dashboard/index.html << 'DASHBOARD_HTML'
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>VPS Dashboard</title>
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      background: linear-gradient(135deg, #1a1a2e 0%, #16213e 50%, #0f3460 100%);
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 2rem;
+    }
+    h1 {
+      color: #fff;
+      font-size: 2rem;
+      margin-bottom: 2rem;
+      text-shadow: 0 2px 10px rgba(0,0,0,0.3);
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      gap: 1.5rem;
+      max-width: 900px;
+      width: 100%;
+    }
+    .tile {
+      background: rgba(255,255,255,0.1);
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(255,255,255,0.2);
+      border-radius: 16px;
+      padding: 1.5rem;
+      text-align: center;
+      text-decoration: none;
+      color: #fff;
+      transition: all 0.3s ease;
+    }
+    .tile:hover {
+      transform: translateY(-5px);
+      background: rgba(255,255,255,0.2);
+      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+    }
+    .tile-icon {
+      font-size: 2.5rem;
+      margin-bottom: 0.75rem;
+    }
+    .tile-name {
+      font-weight: 600;
+      font-size: 1.1rem;
+    }
+    .footer {
+      margin-top: 2rem;
+      color: rgba(255,255,255,0.5);
+      font-size: 0.85rem;
+    }
+  </style>
+</head>
+<body>
+  <h1>🚀 VPS Dashboard</h1>
+  <div class="grid">
+DASHBOARD_HTML
+
+            # Add tiles for each app with ingress
+            declare -A icons
+            icons[portainer]="🐳"; icons[dozzle]="📜"; icons[filebrowser]="📁"
+            icons[qbittorrent]="⬇️"; icons[uptime-kuma]="📊"; icons[dashboard]="🏠"
+            icons[telegram-bot]="🤖"; icons[whatsapp-bot]="💬"
+            
+            for ingress_file in apps/*/ingress.yml; do
+              if [ -f "$ingress_file" ]; then
+                app_dir=$(dirname "$ingress_file")
+                app_name=$(basename "$app_dir")
+                
+                # Skip dashboard itself
+                [ "$app_name" = "dashboard" ] && continue
+                
+                if command -v yq &>/dev/null; then
+                  hostname=$(yq '.hostname' "$ingress_file")
+                else
+                  hostname=$(grep "^hostname:" "$ingress_file" | awk '{print $2}')
+                fi
+                
+                icon="${icons[$app_name]:-🔗}"
+                display_name=$(echo "$app_name" | sed 's/-/ /g' | sed 's/\b\(.\)/\u\1/g')
+                
+                cat >> config/dashboard/index.html << TILE
+    <a href="https://${hostname}.${{ secrets.DOMAIN }}" class="tile" target="_blank">
+      <div class="tile-icon">${icon}</div>
+      <div class="tile-name">${display_name}</div>
+    </a>
+TILE
+              fi
+            done
+
+            # Close HTML
+            cat >> config/dashboard/index.html << 'DASHBOARD_END'
+  </div>
+  <p class="footer">Auto-generated on deploy</p>
+</body>
+</html>
+DASHBOARD_END
+            echo "✅ Dashboard generated with $(ls apps/*/ingress.yml 2>/dev/null | wc -l) apps"
+
+            # 7. Run init scripts for each app (first-time setup)
             for init_script in apps/*/init.sh; do
               if [ -f "$init_script" ]; then
                 echo "🔧 Running $(dirname $init_script)/init.sh"
@@ -92,7 +202,7 @@ jobs:
               fi
             done
 
-            # 7. Deployment
+            # 8. Deployment
             sysctl -w net.core.rmem_max=2500000 || true
             docker compose up -d --build --remove-orphans
             docker image prune -f
