fix: security hardening and documentation updates
- watchtower: add :ro flag to docker socket mount
- glances: add port 61208 mapping and ingress.yml
- whatsapp-bot: run container as non-root user
- deploy.yml: pin ssh-action to v1.2.0
- README.md: add Glances and Watchtower to stack table

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Deploy via SSH
-        uses: appleboy/ssh-action@master
+        uses: appleboy/ssh-action@v1.2.0
         env:
           TUNNEL_CREDENTIALS: ${{ secrets.TUNNEL_CREDENTIALS }}
         with:
