--- a/apps/watchtower/docker-compose.yml
+++ b/apps/watchtower/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - WATCHTOWER_CLEANUP=true
       - WATCHTOWER_SCHEDULE=0 0 4 * * *
     healthcheck:
-      test: [ "CMD-SHELL", "pgrep -x watchtower || exit 1" ]
+      test: [ "CMD", "/watchtower", "--health-check" ]
       interval: 30s
       timeout: 10s
       retries: 3
