fix: comprehensive repo cleanup (docs, security, consistency)

--- a/apps/telegram-bot/Dockerfile
+++ b/apps/telegram-bot/Dockerfile
@@ -5,6 +5,9 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY bot.py .
+COPY --chown=nobody:nobody bot.py .
+
+# Run as non-root user
+USER nobody
 
 CMD ["python", "bot.py"]
