Refactor: Move all icons to icons.conf file
- icons.conf now contains ALL icon mappings (single source of truth)
- generate.sh simplified to only read from icons.conf
- Added icons for archived apps (changedetection, homarr, it-tools, n8n)
- Added __default__ fallback icon (🔗)
- No need to edit generate.sh when adding new app icons

To add a new icon, simply edit icons.conf:
  myapp=🚀

--- a/apps/dashboard/icons.conf
+++ b/apps/dashboard/icons.conf
@@ -1,8 +1,28 @@
 # Dashboard Icons Configuration
 # Format: app_name=emoji
-# Add custom icons for new apps here
+# This is the single source of truth for all app icons
+# Add or modify icons here - no need to edit generate.sh
 
-# Examples:
+# Core Apps
+portainer=🐳
+filebrowser=📁
+qbittorrent=⬇️
+uptime-kuma=📊
+telegram-bot=🤖
+whatsapp-bot=💬
+glances=🖥️
+
+# Archived Apps (ready to use if enabled)
+changedetection=👁️
+homarr=🏠
+it-tools=🛠️
+n8n=⚡
+
+# Default icon for unknown apps
+# (Don't remove this - used as fallback)
+__default__=🔗
+
+# Add your custom apps below:
 # myapp=🚀
 # database=🗄️
-# ai=🤖
+# ai=🧠
