--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,18 +34,13 @@ jobs:
             : > .env  # Clear .env (safer than echo)
 
             # 3. Auto-generate docker-compose.yml from apps/*/docker-compose.yml
+            # Note: Dot-prefixed folders (.template, .archive) are automatically excluded
             echo "# Auto-generated - DO NOT EDIT" > docker-compose.yml
             echo "# Add/remove apps by adding/removing folders in apps/" >> docker-compose.yml
             echo "" >> docker-compose.yml
             echo "include:" >> docker-compose.yml
             for compose_file in apps/*/docker-compose.yml; do
               if [ -f "$compose_file" ]; then
-                app_name=$(basename "$(dirname "$compose_file")")
-                # Skip template folder (not a real app)
-                if [ "$app_name" = "_template" ]; then
-                  echo "  ⏭️  Skipped: $compose_file (template)"
-                  continue
-                fi
                 echo "  - $compose_file" >> docker-compose.yml
                 echo "  ✓ Included: $compose_file"
               fi
@@ -68,14 +63,9 @@ jobs:
                 wget -qO /usr/bin/yq https://github.com/mikefarah/yq/releases/download/v4.40.5/yq_linux_amd64 && chmod +x /usr/bin/yq
               fi
               
+              # Note: Dot-prefixed folders (.template, .archive) are automatically excluded
               for ingress_file in apps/*/ingress.yml; do
                 if [ -f "$ingress_file" ]; then
-                  app_name=$(basename "$(dirname "$ingress_file")")
-                  # Skip template folder (not a real app)
-                  if [ "$app_name" = "_template" ]; then
-                    echo "  ⏭️  Skipped ingress: $ingress_file (template)"
-                    continue
-                  fi
                   hostname=$(yq '.hostname' "$ingress_file")
                   service=$(yq '.service' "$ingress_file")
                   echo "  - hostname: ${hostname}.${{ secrets.DOMAIN }}" >> config/tunnel/config.yml
@@ -104,14 +94,9 @@ jobs:
             bash apps/dashboard/generate.sh "${{ secrets.DOMAIN }}"
 
             # 7. Run init scripts for each app (first-time setup)
+            # Note: Dot-prefixed folders (.template, .archive) are automatically excluded
             for init_script in apps/*/init.sh; do
               if [ -f "$init_script" ]; then
-                app_name=$(basename "$(dirname "$init_script")")
-                # Skip template folder (not a real app)
-                if [ "$app_name" = "_template" ]; then
-                  echo "  ⏭️  Skipped: $init_script (template)"
-                  continue
-                fi
                 echo "🔧 Running $init_script"
                 bash "$init_script"
               fi
