--- a/apps/dashboard/icons.conf
+++ b/apps/dashboard/icons.conf
@@ -11,6 +11,9 @@ uptime-kuma=📊
 telegram-bot=🤖
 whatsapp-bot=💬
 glances=🖥️
+jellyfin=🍿
+stirling-pdf=📄
+dockge=🏗️
 
 # Archived Apps (ready to use if enabled)
 changedetection=👁️
