Fix dashboard path mismatch (config/ -> apps/)

--- a/apps/dashboard/docker-compose.yml
+++ b/apps/dashboard/docker-compose.yml
@@ -4,6 +4,6 @@ services:
     container_name: dashboard
     restart: always
     volumes:
-      - /root/my-vps-stack/config/dashboard:/usr/share/nginx/html:ro
+      - ./index.html:/usr/share/nginx/html/index.html:ro
     ports:
       - "8090:80"
