--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,12 @@ npm-debug.log
 config/tunnel/
 config/fb/
 config/qbit/
+# Ignore Generated Config (Keep source files, ignore runtime data)
+config/tunnel/
+config/fb/
+config/qbit/
 config/dozzle/
+apps/dashboard/index.html
 
 # Ignore Local
 dev_log.md
